Name:               parfold
Version:            0.9
Synopsis:           Parallel folds
Description:
   Small but convenient abstraction for concurrent programming that 
   models a form of parallel fold for associative operators.

Author:             Martin Avanzini <martin.avanzini@uibk.ac.at>,
                    Georg Moser <georg.moser@uibk.ac.at>,
                    Andreas Schnabl <andreas.schnabl@uibk.ac.at>
Category:           Concurrency
Maintainer:         Martin Avanzini <martin.avanzini@uibk.ac.at>
Stability:          Stable
License:            LGPL
License-file:       COPYING.LESSER
Homepage:           http://cl-informatik.uibk.ac.at/software/tct/
cabal-version:      >= 1.6
build-type:	    Simple

library
 exposed-modules:   
  Control.Concurrent.PFold
  Control.Concurrent.Utils
 build-depends:     
  base == 4.*, 
  parallel >= 3.2, 
  containers >= 0.5, 
  mtl >= 2.1, 
  process >= 1.1
 ghc-options:       
  -Wall -threaded -O2
